--- a/packaging/systemd/sc-metrics-agent.service
+++ b/packaging/systemd/sc-metrics-agent.service
@@ -7,6 +7,7 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
+Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ExecStart=/usr/local/bin/sc-metrics-agent
 Environment=SC_AGENT_CONFIG=/etc/sc-metrics-agent/config.yaml
 Restart=always
