feat: enhance metric collection and validation
- Added comprehensive tests for metric validation to ensure only supported metrics are generated by collectors.
- Implemented a mock ingest server to simulate resource-manager behavior for end-to-end testing.
- Improved error handling and logging for HTTP response body closure in the tsclient.
- Updated collector tests to reflect changes in the configuration and expected metrics.
- Validated metric name formats and ensured compliance with resource-manager expectations.
- Enhanced environment variable handling in configuration tests to improve reliability.
- Added batch processing tests to verify handling of large metric submissions.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -97,6 +97,6 @@ jobs:
         go-version: '1.21'
 
     - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
-      with:
-        args: ./...
+      run: |
+        go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+        gosec -fmt sarif -out gosec-report.sarif -stdout ./...
