--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,10 @@ jobs:
     name: Build and Deploy Stable Release
     runs-on: ubuntu-latest
     needs: validate-version
+    permissions:
+      contents: write  # Required for creating releases
+      actions: read    # Required for downloading artifacts
+      checks: read     # Required for status checks
     
     steps:
     - name: Checkout code
