--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,6 +8,9 @@ http_timeout: 30s
 # Ingestor endpoint configuration
 ingestor_endpoint: "https://api.cloud.strettch.dev/resource-manager/api/v1/metrics/ingest"
 
+# Metadata service endpoint for authentication
+metadata_service_endpoint: "http://169.254.169.254/metadata/v1/auth-token"
+
 # Agent identification - VM ID will be automatically detected if not specified
 vm_id: ""
 
