--- a/packaging/systemd/sc-metrics-agent.service
+++ b/packaging/systemd/sc-metrics-agent.service
@@ -1,7 +1,9 @@
 [Unit]
-Description=SC Metrics Agent
-After=network.target
-Wants=network.target
+Description=SC Metrics Agent - System metrics collection and monitoring
+Documentation=https://docs.cloud.strettch.com/agents/sc-metrics-agent
+After=network-online.target
+Wants=network-online.target
+Requires=network.target
 
 [Service]
 Type=simple
@@ -10,9 +12,19 @@ Group=root
 Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ExecStart=/usr/local/bin/start-sc-metrics-agent.sh
 Restart=always
-RestartSec=5
+RestartSec=30
 KillMode=mixed
 KillSignal=SIGTERM
+
+# Environment
+Environment="PATH=/usr/local/sbin:/usr/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+EnvironmentFile=-/etc/sc-metrics-agent/environment
+
+# Logging
+StandardOutput=journal
+StandardError=journal
+SyslogIdentifier=SCMetricsAgent
+SyslogLevel=info
 
 [Install]
 WantedBy=multi-user.target
