--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,17 +140,18 @@ jobs:
       run: |
         # Create staging directory
         STAGING_DIR="/tmp/sc-metrics-agent-build"
-        mkdir -p "${STAGING_DIR}/usr/local/bin" "${STAGING_DIR}/etc/sc-metrics-agent" "${STAGING_DIR}/etc/systemd/system"
+        mkdir -p "${STAGING_DIR}/usr/bin" "${STAGING_DIR}/usr/local/bin" "${STAGING_DIR}/etc/sc-metrics-agent" "${STAGING_DIR}/etc/systemd/system"
         
         # Copy files
         cp build/sc-metrics-agent "${STAGING_DIR}/usr/local/bin/"
         cp packaging/scripts/start-sc-metrics-agent.sh "${STAGING_DIR}/usr/local/bin/"
         chmod +x "${STAGING_DIR}/usr/local/bin/start-sc-metrics-agent.sh"
-        cp packaging/scripts/sc-metrics-agent-updater.sh "${STAGING_DIR}/usr/local/bin/"
-        chmod +x "${STAGING_DIR}/usr/local/bin/sc-metrics-agent-updater.sh"
+        cp packaging/scripts/sc-metrics-agent-updater.sh "${STAGING_DIR}/usr/bin/"
+        chmod +x "${STAGING_DIR}/usr/bin/sc-metrics-agent-updater.sh"
         cp config.example.yaml "${STAGING_DIR}/etc/sc-metrics-agent/config.yaml"
         cp packaging/systemd/sc-metrics-agent.service "${STAGING_DIR}/etc/systemd/system/"
-        cp packaging/systemd/sc-metrics-agent-updater.service "${STAGING_DIR}/etc/systemd/system/"
+        cp packaging/systemd/sc-metrics-agent-update-scheduler.service "${STAGING_DIR}/etc/systemd/system/"
+        cp packaging/systemd/sc-metrics-agent-update-scheduler.timer "${STAGING_DIR}/etc/systemd/system/"
         
         # Build package
         fpm -s dir -t deb -n sc-metrics-agent -v ${VERSION#v} \
@@ -191,7 +192,7 @@ jobs:
           
           ### Installation
           ```bash
-          curl -sSL https://repo.cloud.strettch.dev/install.sh | sudo bash
+          curl -sSL https://repo.cloud.strettch.dev/metrics/install.sh | sudo bash
           ```
           
           ### Changes since last release:
