--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,9 @@ jobs:
         echo "New version: $VERSION"
         echo "Release type: ${{ github.event.inputs.release_type }}"
         
+        # Install packaging library
+        python3 -m pip install --user packaging
+        
         # Validate version increment
         python3 << EOF
         import sys
@@ -95,7 +98,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        ref: main
+        ref: dev
         fetch-depth: 0
 
     - name: Set up Go
@@ -133,7 +136,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y ruby ruby-dev build-essential
-        sudo gem install fpm
+        
+    - name: Install FPM gem
+      run: sudo gem install fpm --no-document
 
     - name: Build package
       env:
@@ -169,10 +174,19 @@ jobs:
         REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
         REPO_HOST: ${{ secrets.REPO_HOST }}
         REPO_USER: ${{ secrets.REPO_USER }}
-        VERSION: ${{ needs.validate-version.outputs.version }}
       run: |
-        chmod +x .github/scripts/deploy-to-repo.sh
-        .github/scripts/deploy-to-repo.sh stable sc-metrics-agent_${VERSION}_amd64.deb
+        # Setup SSH
+        mkdir -p ~/.ssh
+        echo "$REPO_SSH_KEY" > ~/.ssh/deploy_key
+        chmod 600 ~/.ssh/deploy_key
+        ssh-keyscan -H "$REPO_HOST" >> ~/.ssh/known_hosts
+        
+        # Update codebase and deploy packages  
+        scp -i ~/.ssh/deploy_key *.deb "${REPO_USER}@${REPO_HOST}:/root/sc-metrics-agent/"
+        ssh -i ~/.ssh/deploy_key "${REPO_USER}@${REPO_HOST}" "cd /root/sc-metrics-agent && git remote set-url origin git@github.com:strettch/sc-metrics-agent.git && git checkout . && git clean -fd && git checkout dev && git fetch origin dev && git reset --hard origin/dev && RELEASE_TYPE=stable ./setup_repo.sh"
+        
+        echo "✅ Deployment completed successfully!"
+        echo "📦 Repository updated at: https://repo.cloud.strettch.com/metrics/"
 
     - name: Create Git tag
       run: |
