--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,30 +41,56 @@ jobs:
         fi
         
         # Check if version already exists
-        if git tag -l | grep -q "^v$VERSION$"; then
-          echo "Error: Version v$VERSION already exists"
+        if git tag -l | grep -q "^$VERSION$"; then
+          echo "Error: Version $VERSION already exists"
           exit 1
         fi
         
         # Get last stable release
-        LAST_STABLE=$(git tag -l --sort=-version:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -1 || echo "v0.0.0")
-        LAST_STABLE_CLEAN=${LAST_STABLE#v}
+        LAST_STABLE=$(git tag -l --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | head -1 | tr -d '\n' || echo "")
+        
+        # Sanitize and set default if no stable releases found
+        if [ -z "$LAST_STABLE" ] || [ "$LAST_STABLE" = " " ]; then
+            LAST_STABLE_CLEAN="0.0.0"
+        else
+            # Remove any whitespace and validate format
+            LAST_STABLE_CLEAN=$(echo "$LAST_STABLE" | tr -d '[:space:]')
+            if [[ ! $LAST_STABLE_CLEAN =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+                LAST_STABLE_CLEAN="0.0.0"
+            fi
+        fi
         
         echo "Last stable version: $LAST_STABLE_CLEAN"
         echo "New version: $VERSION"
         echo "Release type: ${{ github.event.inputs.release_type }}"
+        
+        # Install packaging library
+        python3 -m pip install --user packaging
         
         # Validate version increment
         python3 << EOF
         import sys
         from packaging import version
         
-        last = "$LAST_STABLE_CLEAN".split('.')
-        new = "$VERSION".split('.')
-        release_type = "${{ github.event.inputs.release_type }}"
+        # Sanitize inputs
+        last_version = "$LAST_STABLE_CLEAN".strip()
+        new_version = "$VERSION".strip()
+        release_type = "${{ github.event.inputs.release_type }}".strip()
         
-        last_major, last_minor, last_patch = int(last[0]), int(last[1]), int(last[2])
-        new_major, new_minor, new_patch = int(new[0]), int(new[1]), int(new[2])
+        # Parse versions with error handling
+        try:
+            last = last_version.split('.')
+            last_major, last_minor, last_patch = map(int, last)
+        except (ValueError, IndexError):
+            print(f"Warning: Could not parse last version '{last_version}', using 0.0.0")
+            last_major, last_minor, last_patch = 0, 0, 0
+            
+        try:
+            new = new_version.split('.')
+            new_major, new_minor, new_patch = map(int, new)
+        except (ValueError, IndexError):
+            print(f"Error: Could not parse new version '{new_version}'")
+            sys.exit(1)
         
         if release_type == "major":
             expected = f"{last_major + 1}.0.0"
@@ -80,7 +106,7 @@ jobs:
         print(f"Version validation passed: $VERSION is a valid {release_type} release")
         EOF
         
-        echo "version=v$VERSION" >> $GITHUB_OUTPUT
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
 
   stable-release:
     name: Build and Deploy Stable Release
@@ -95,6 +121,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
+        ref: main
         fetch-depth: 0
 
     - name: Set up Go
@@ -132,7 +159,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y ruby ruby-dev build-essential
-        sudo gem install fpm
+        
+    - name: Install FPM gem
+      run: sudo gem install fpm --no-document
 
     - name: Build package
       env:
@@ -140,20 +169,21 @@ jobs:
       run: |
         # Create staging directory
         STAGING_DIR="/tmp/sc-metrics-agent-build"
-        mkdir -p "${STAGING_DIR}/usr/local/bin" "${STAGING_DIR}/etc/sc-metrics-agent" "${STAGING_DIR}/etc/systemd/system"
+        mkdir -p "${STAGING_DIR}/usr/bin" "${STAGING_DIR}/usr/local/bin" "${STAGING_DIR}/etc/sc-metrics-agent" "${STAGING_DIR}/etc/systemd/system"
         
         # Copy files
         cp build/sc-metrics-agent "${STAGING_DIR}/usr/local/bin/"
         cp packaging/scripts/start-sc-metrics-agent.sh "${STAGING_DIR}/usr/local/bin/"
         chmod +x "${STAGING_DIR}/usr/local/bin/start-sc-metrics-agent.sh"
-        cp packaging/scripts/sc-metrics-agent-updater.sh "${STAGING_DIR}/usr/local/bin/"
-        chmod +x "${STAGING_DIR}/usr/local/bin/sc-metrics-agent-updater.sh"
+        cp packaging/scripts/sc-metrics-agent-updater.sh "${STAGING_DIR}/usr/bin/"
+        chmod +x "${STAGING_DIR}/usr/bin/sc-metrics-agent-updater.sh"
         cp config.example.yaml "${STAGING_DIR}/etc/sc-metrics-agent/config.yaml"
         cp packaging/systemd/sc-metrics-agent.service "${STAGING_DIR}/etc/systemd/system/"
-        cp packaging/systemd/sc-metrics-agent-updater.service "${STAGING_DIR}/etc/systemd/system/"
+        cp packaging/systemd/sc-metrics-agent-update-scheduler.service "${STAGING_DIR}/etc/systemd/system/"
+        cp packaging/systemd/sc-metrics-agent-update-scheduler.timer "${STAGING_DIR}/etc/systemd/system/"
         
         # Build package
-        fpm -s dir -t deb -n sc-metrics-agent -v ${VERSION#v} \
+        fpm -s dir -t deb -n sc-metrics-agent -v ${VERSION} \
           -C "${STAGING_DIR}/" \
           --description "SC Metrics Agent for system monitoring" \
           --maintainer "engineering@strettch.com" \
@@ -170,7 +200,7 @@ jobs:
         VERSION: ${{ needs.validate-version.outputs.version }}
       run: |
         chmod +x .github/scripts/deploy-to-repo.sh
-        .github/scripts/deploy-to-repo.sh stable sc-metrics-agent_${VERSION#v}_amd64.deb
+        .github/scripts/deploy-to-repo.sh stable sc-metrics-agent_${VERSION}_amd64.deb
 
     - name: Create Git tag
       run: |
@@ -191,7 +221,7 @@ jobs:
           
           ### Installation
           ```bash
-          curl -sSL https://repo.cloud.strettch.dev/install.sh | sudo bash
+          curl -sSL https://repo.cloud.strettch.com/metrics/install.sh | sudo bash
           ```
           
           ### Changes since last release:
