feat: Add automatic config download for sc-metrics-agent
Implements automatic downloading of agent.yaml from repo server during
installation and auto-update, matching the sc-agent implementation.

Changes:
- Created download-config.sh script to fetch agent.yaml from repo server
- Updated setup_repo.sh to include download-config.sh in package
- Modified post-install.sh to download config during installation (fails on error)
- Modified sc-metrics-agent-updater.sh to download config during updates (warns on error)
- Updated config.go to read metadata service base URL from agent.yaml
- Updated config_test.go to handle new config loading requirements
- Added workflow_dispatch trigger to beta.yml for manual releases

The config download process:
- Detects environment from SC_ENVIRONMENT or existing agent.yaml
- Downloads from https://repo.cloud.strettch.com/agent/config/{env}/agent.yaml
- Uses retry logic (3 attempts with 5s delay)
- Installation fails if download fails (critical for new installs)
- Auto-update warns but continues if download fails (maintains availability)

Metadata service URL is now read from agent.yaml:
- Reads metadata_service.base_url from /etc/strettchcloud/config/agent.yaml
- Constructs full endpoint URL by appending /metadata/v1/auth-token
- Panics if agent.yaml is missing or invalid (fail fast on configuration errors)
- Can be overridden via SC_AGENT_CONFIG environment variable

All tests updated to provide temporary agent.yaml files for testing.

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -8,6 +8,12 @@ on:
       - '**.md'
       - 'docs/**'
       - '.github/workflows/release.yml'
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual release'
+        required: false
+        default: 'Manual release trigger'
 
 env:
   GO_VERSION: '1.25'
